--- a/PasC/PasC/PasC.csproj
+++ b/PasC/PasC/PasC.csproj
@@ -42,8 +42,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Grammar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="States\Source.cs" />
+    <Compile Include="States\State0.cs" />
+    <Compile Include="States\State19.cs" />
+    <Compile Include="States\State18.cs" />
+    <Compile Include="States\State17.cs" />
+    <Compile Include="States\State16.cs" />
+    <Compile Include="States\State15.cs" />
+    <Compile Include="States\State14.cs" />
+    <Compile Include="States\State13.cs" />
+    <Compile Include="States\State12.cs" />
+    <Compile Include="States\State11.cs" />
+    <Compile Include="States\State5.cs" />
+    <Compile Include="States\State4.cs" />
+    <Compile Include="States\State3.cs" />
+    <Compile Include="States\State10.cs" />
+    <Compile Include="States\State9.cs" />
+    <Compile Include="States\State8.cs" />
+    <Compile Include="States\State7 .cs" />
+    <Compile Include="States\State6.cs" />
+    <Compile Include="States\State2.cs" />
+    <Compile Include="States\State1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
