Pacote de documentação criado para assets de consulta e secundários.

--- a/PasC/PasC/PasC.csproj
+++ b/PasC/PasC/PasC.csproj
@@ -84,6 +84,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Documentation\Automata\PasC_Automata.jff" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Documentation\Automata\PasC_Automata.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
