--- a/PasC/PasC/PasC.csproj
+++ b/PasC/PasC/PasC.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Models\Grammar.cs" />
     <Compile Include="Models\Identifier.cs" />
+    <Compile Include="Models\Parser.cs" />
     <Compile Include="Models\Token.cs" />
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Program.cs" />
